Fixed: styling objects moving when scroll using absolute on mobile.

--- a/client/src/app/styles/components.css
+++ b/client/src/app/styles/components.css
@@ -25,7 +25,8 @@ p{
 }
 
 .center-screen{
-  position: fixed;
+  margin: 0;
+  position: absolute;
   top: 50%;
   left: 50%;
   margin-right: -50%;
